- rename xhtml-1.1 to xhtml-11 (no repo copy because we were at revision   1.1; no history to preserve) - run xmlcatmgr on package install + deinstall - bump PORTREVISION

--- a/textproc/xhtml-11/Makefile
+++ b/textproc/xhtml-11/Makefile
@@ -7,6 +7,7 @@
 
 PORTNAME=	xhtml
 PORTVERSION=	1.1
+PORTREVISION=	1
 CATEGORIES=	textproc
 MASTER_SITES=	http://www.w3.org/TR/xhtml11/
 DISTNAME=	xhtml11
@@ -15,12 +16,23 @@ EXTRACT_SUFX=	.tgz
 MAINTAINER=	ports@FreeBSD.org
 COMMENT=	W3C's XHTML 1.1 DTD
 
+RUN_DEPENDS=	${XMLCATMGR}:${PORTSDIR}/textproc/xmlcatmgr
+
 WRKSRC=		${WRKDIR}/xhtml11-20010531
 NO_BUILD=	yes
+PLIST_SUB=	XMLCATMGR=${XMLCATMGR} DTDDIR=${DTDDIR} \
+		CATALOG_PORTS_SGML=${CATALOG_PORTS_SGML}
+
 DTDDIR=		${PREFIX}/share/xml/${PORTNAME}/${PORTVERSION}
+XMLCATMGR=	${LOCALBASE}/bin/xmlcatmgr
+CATALOG_PORTS_SGML=	${PREFIX}/share/sgml/catalog.ports
 
 do-install:
 	${MKDIR} ${DTDDIR}
 	${INSTALL_DATA} ${WRKSRC}/DTD/* ${DTDDIR}
+
+post-install:
+	${XMLCATMGR} -sc ${CATALOG_PORTS_SGML}	\
+		add CATALOG ${DTDDIR}/xhtml11.cat
 
 .include <bsd.port.mk>
