--- a/mail/qmhandle/Makefile
+++ b/mail/qmhandle/Makefile
@@ -6,11 +6,11 @@
 #
 
 PORTNAME=	qmHandle
-PORTVERSION=	1.0.0
-PORTREVISION=	1
+PORTVERSION=	1.2.0
 CATEGORIES=	mail
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE}
 MASTER_SITE_SUBDIR=	qmhandle
+DISTNAME=	qmhandle-${PORTVERSION}
 
 MAINTAINER=	petef@FreeBSD.org
 COMMENT=	Tool to view and manage a qmail queue
@@ -27,6 +27,12 @@ QMAIL_DIR?=	${LOCALBASE}/qmail
 QMAIL_DIR?=	/var/qmail
 .endif
 
+.include <bsd.port.pre.mk>
+
+.if ${PERL_LEVEL} < 500601
+IGNORE=         Port requires perl 5.6.1 or later. Install lang/perl5 then try again
+.endif
+
 post-patch:
 	@${PERL} -pi -e 's,^#!/usr/bin/perl,#!${PERL},; \
 		s,%%LOCALBASE%%,${LOCALBASE},g' ${WRKSRC}/qmHandle
@@ -40,4 +46,4 @@ do-install:
 .endfor
 .endif
 
-.include <bsd.port.mk>
+.include <bsd.port.post.mk>
