add q 4.6 Q -- equational programming language

--- a/lang/Makefile
+++ b/lang/Makefile
@@ -182,6 +182,7 @@
     SUBDIR += python20
     SUBDIR += python21
     SUBDIR += python22
+    SUBDIR += q
     SUBDIR += qc--
     SUBDIR += qscheme
     SUBDIR += quack
