add q-audio 1.2 Q-Audio -- digital audio interface for the Q language

--- a/audio/Makefile
+++ b/audio/Makefile
@@ -262,6 +262,7 @@
     SUBDIR += py-vorbis
     SUBDIR += py-xmms
     SUBDIR += pysol-sound-server
+    SUBDIR += q-audio
     SUBDIR += quelcom
     SUBDIR += radio
     SUBDIR += raproxy
