--- a/devel/Makefile
+++ b/devel/Makefile
@@ -619,6 +619,7 @@
     SUBDIR += p5-DateTime-Event-Easter
     SUBDIR += p5-DateTime-Event-ICal
     SUBDIR += p5-DateTime-Event-NameDay
+    SUBDIR += p5-DateTime-Event-Random
     SUBDIR += p5-DateTime-Event-Recurrence
     SUBDIR += p5-DateTime-Event-Sunrise
     SUBDIR += p5-DateTime-Fiscal-Year
