Add p5-DateTime-Format-Duration 1.01
Format and parse DateTime::Durations.

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -628,6 +628,7 @@
     SUBDIR += p5-DateTime-Format-Builder
     SUBDIR += p5-DateTime-Format-DBI
     SUBDIR += p5-DateTime-Format-DateManip
+    SUBDIR += p5-DateTime-Format-Duration
     SUBDIR += p5-DateTime-Format-Epoch
     SUBDIR += p5-DateTime-Format-Excel
     SUBDIR += p5-DateTime-Format-HTTP
