--- a/net/nss_ldap/Makefile
+++ b/net/nss_ldap/Makefile
@@ -7,7 +7,7 @@
 
 PORTNAME=	nss_ldap
 PORTVERSION=	1.${NSS_LDAP_VERSION}
-PORTREVISION=	2
+PORTREVISION=	3
 CATEGORIES=	net
 MASTER_SITES=	http://www.padl.com/download/
 DISTNAME=	${PORTNAME}-${NSS_LDAP_VERSION}
@@ -21,15 +21,25 @@ NSS_LDAP_VERSION=204
 
 GNU_CONFIGURE=	yes
 INSTALLS_SHLIB=	yes
+PKGMESSAGE=	${WRKDIR}/pkg-message
 
 CONFIGURE_ENV=	CPPFLAGS="-I${LOCALBASE}/include" \
 		LDFLAGS="-L${LOCALBASE}/lib -Wl,-rpath,${LOCALBASE}/lib"
 
+CONFIGURE_ARGS=	--with-ldap-conf-file=${PREFIX}/etc/nss_ldap.conf \
+		--with-ldap-secret-file=${PREFIX}/etc/nss_ldap.secret
+
 post-extract:
 	${CP} ${FILESDIR}/bsdnss.c ${WRKSRC}
 
+post-build:
+	${SED} -e "s,%%PREFIX%%,${PREFIX},g" ${PKGDIR}/pkg-message > ${PKGMESSAGE}
+
 do-install:
-	${INSTALL_PROGRAM} ${WRKSRC}/nss_ldap.so ${LOCALBASE}/lib/nss_ldap.so.1
+	${INSTALL_PROGRAM} ${WRKSRC}/nss_ldap.so ${PREFIX}/lib/nss_ldap.so.1
+	${INSTALL_DATA} ${WRKSRC}/ldap.conf ${PREFIX}/etc/nss_ldap.conf.sample
+	${CAT} ${PKGMESSAGE}
+
 
 .include <bsd.port.pre.mk>
 .if ${OSVERSION} < 500112
