--- a/devel/Makefile
+++ b/devel/Makefile
@@ -641,6 +641,7 @@
     SUBDIR += p5-DateTime-Format-Roman
     SUBDIR += p5-DateTime-Format-Strptime
     SUBDIR += p5-DateTime-Format-W3CDTF
+    SUBDIR += p5-DateTime-Functions
     SUBDIR += p5-DateTime-HiRes
     SUBDIR += p5-DateTime-Incomplete
     SUBDIR += p5-DateTime-Locale
