Add p5-DateTime-TimeZone-LMT 1.00
A Local Mean Time time zone for DateTime.

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -649,6 +649,7 @@
     SUBDIR += p5-DateTime-Set
     SUBDIR += p5-DateTime-TimeZone
     SUBDIR += p5-DateTime-TimeZone-Alias
+    SUBDIR += p5-DateTime-TimeZone-LMT
     SUBDIR += p5-Devel-Constants
     SUBDIR += p5-Devel-Cover
     SUBDIR += p5-Devel-DProf
