--- a/devel/libformat/Makefile
+++ b/devel/libformat/Makefile
@@ -7,29 +7,21 @@
 #
 
 PORTNAME=	libformat
-PORTVERSION=	0.1.7
-PORTREVISION=	1
+PORTVERSION=	1.1
 CATEGORIES=	devel
-MASTER_SITES=	http://home.pages.at/kingleo/development/
-DISTNAME=	Format-${PORTVERSION}
+MASTER_SITES=	http://kingleo.pages.at/development/cpp/
+DISTNAME=	${PORTNAME:S/^lib//}-${PORTVERSION}
 
 MAINTAINER=	ports@FreeBSD.org
 COMMENT=	C++ library that supports printf style like format printing
 
-USE_REINPLACE=	yes
-GNU_CONFIGURE=	yes
-CONFIGURE_TARGET=	--build=${ARCH}-portbld-freebsd${OSREL}
+MAKEFILE=	${FILESDIR}/Makefile.lib
 INSTALLS_SHLIB=	yes
-
-MAN3=	Format.3
-
-post-patch:
-	@${REINPLACE_CMD} -e 's| install-data-local||g' ${WRKSRC}/doc/Makefile.in
 
 post-install:
 .if !defined(NOPORTDOCS)
 	@${MKDIR} ${DOCSDIR}
-.for file in doc/Format.html doc/Format.txt src/testMakefile src/testformat.cpp
+.for file in ChangeLog README testformat.cpp
 	${INSTALL_DATA} ${WRKSRC}/${file} ${DOCSDIR}
 .endfor
 .endif
