- Update to version 1.10
PR:		61080
Submitted by:	Ports Fury

--- a/sysutils/asmem/Makefile
+++ b/sysutils/asmem/Makefile
@@ -5,12 +5,10 @@
 # $FreeBSD$
 #
 
-PORTNAME=		asmem
-PORTVERSION=		1.8
-CATEGORIES=		sysutils afterstep
-MASTER_SITES=		${MASTER_SITE_AFTERSTEP} \
-			http://www.bewoner.dma.be/Albert/software/
-MASTER_SITE_SUBDIR=	apps/asmem
+PORTNAME=	asmem
+PORTVERSION=	1.10
+CATEGORIES=	sysutils afterstep
+MASTER_SITES=	http://www.tigr.net/afterstep/download/asmem/
 
 MAINTAINER=	ports@FreeBSD.org
 COMMENT=	An AfterStep look-n-feel memory utilization monitor
@@ -19,13 +17,9 @@ USE_X_PREFIX=	yes
 USE_XPM=	yes
 GNU_CONFIGURE=	yes
 MAN1=		asmem.1
-MAKE_ENV=	PCFLAGS="${CFLAGS}"
-
-.include <bsd.port.pre.mk>
 
 do-install:
+	${INSTALL_PROGRAM} -g kmem -m 2755 ${WRKSRC}/asmem ${PREFIX}/bin
 	${INSTALL_MAN} ${WRKSRC}/asmem.man ${PREFIX}/man/man1/asmem.1
-	${INSTALL} ${COPY} ${STRIP} -o ${BINOWN} \
-		-g kmem -m 2755 ${WRKSRC}/asmem ${PREFIX}/bin
 
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
