--- a/www/pserv/files/patch-pserv.conf
+++ b/www/pserv/files/patch-pserv.conf
@@ -1,8 +1,8 @@
---- pserv.conf.orig	Sun Oct 19 16:51:27 2003
-+++ pserv.conf	Tue Oct 21 00:22:07 2003
+--- defaults/pserv.conf.orig	Sat Dec 20 01:22:10 2003
++++ defaults/pserv.conf	Thu Jan  8 12:33:51 2004
 @@ -1,9 +1,10 @@
--port	80	
-+port		80	
+-port	8080
++port		80
  maxChildren	4
 -documentsPath	/home/multix/public_html
 +documentsPath	%%PREFIX%%/www/data
@@ -10,7 +10,7 @@
  secTimeout	1
  uSecTimeout	100000
 -logFile		/home/multix/pserv/pserv.log
--mimeTypesFile	/home/multix/pserv/mime_types.dat
+-mimeTypesFile	/home/multix/pserv/defaults/mime_types.dat
 -cgiRoot		/home/multix/public_html/cgi-bin
 +logFile		/var/log/pserv.log
 +mimeTypesFile	%%PREFIX%%/etc/mime.types
