qmake changed locations, fix tuxcards for $LOCALBASE-based qmake-installations.

--- a/deskutils/tuxcards/Makefile
+++ b/deskutils/tuxcards/Makefile
@@ -20,9 +20,20 @@ MAKE_ENV=	QTDIR="${QT_PREFIX}"
 post-patch:
 	@${REINPLACE_CMD} -e 's|warn_on|warn_on thread|g' ${WRKSRC}/tuxcards.pro
 
+.include <bsd.port.pre.mk>
+
+# Add this condititonal while people might still have old versions
+# of qmake, living in X11BASE, installed. This should go away eventually.
+
+.if exists(${X11BASE}/share/qt/mkspecs/freebsd-g++)
 do-configure:
 	@cd ${WRKSRC} && ${SETENV} ${MAKE_ENV} qmake \
 		-spec ${X11BASE}/share/qt/mkspecs/freebsd-g++ tuxcards.pro
+.else
+do-configure:
+	@cd ${WRKSRC} && ${SETENV} ${MAKE_ENV} qmake \
+		-spec ${LOCALBASE}/share/qt/mkspecs/freebsd-g++ tuxcards.pro
+.endif
 
 do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/${PORTNAME} ${PREFIX}/bin
@@ -31,4 +42,4 @@ do-install:
 	${INSTALL_DATA} ${WRKSRC}/docs/en/*.* ${DOCSDIR}
 .endif
 
-.include <bsd.port.mk>
+.include <bsd.port.post.mk>
