--- a/ftp/ncftp3/Makefile
+++ b/ftp/ncftp3/Makefile
@@ -14,7 +14,7 @@ MASTER_SITES=	ftp://ftp.ncftp.com/ncftp/
 DISTNAME=	ncftp-${PORTVERSION}-src
 
 PATCH_SITES=	ftp://ftp.kame.net/pub/kame/misc/
-#PATCHFILES=	ncftp-316-v6-20040106.diff.gz
+PATCHFILES=	ncftp-317-v6-20040108b.diff.gz
 PATCH_DIST_STRIP=	-p1
 
 MAINTAINER=	obrien@FreeBSD.org
