--- a/www/apache2/Makefile.modules
+++ b/www/apache2/Makefile.modules
@@ -1,5 +1,5 @@
 # Makefile.modules
-# Author:			Clement Laforet <sheepkiller@cultdeadsheep.org>
+# Author:			Clement Laforet <clement@FreeBSD.org>
 #
 # This file is used to build modules list, DBM dependencies and MPM selection.
 # I hope it can easily handle external modules (such as mod_perl) or MPMs, like
@@ -11,6 +11,10 @@
 #
 # $FreeBSD$
 #
+
+.if defined(SLAVE_DESIGNED_FOR) && ${PORTVERSION} != ${SLAVE_DESIGNED_FOR}
+BROKEN=		"Sorry, ${SLAVENAME} and ${PORTNAME} versionsq are out of sync"
+.endif
 
 # MPM section:
 # << TO BE WRITTEN >>
@@ -35,36 +39,6 @@ PLIST_SUB+=	PREFORK="@comment " WORKER="@comment "
 PLIST_SUB+=	PREFORK="@comment " WORKER="@comment "
 .endif
 
-# Documentation section
-.if defined(NO_CGI)
-MAKE_ENV+=	NO_CGI=yes
-PLIST_SUB+=	CGI="@comment "
-.else
-PLIST_SUB+=	CGI=""
-.endif
-
-.if defined(NO_ICONS)
-MAKE_ENV+=	NO_ICONS=yes
-PLIST_SUB+=	ICONS="@comment "
-.else
-PLIST_SUB+=	ICONS=""
-.endif
-
-.if defined(NO_WWWDATA)
-MAKE_ENV+=	NO_WWWDATA=yes
-PLIST_SUB+=	WWWDATA="@comment "
-.else
-PLIST_SUB+=	WWWDATA=""
-.endif
-
-.if defined(NO_ERROR)
-MAKE_ENV+=	NO_ERROR=yes
-PLIST_SUB+=	ERROR="@comment "
-.else
-PLIST_SUB+=	ERROR=""
-.endif
-
-
 # xDBM section
 #
 .if !defined(WITH_DBM) && defined(WITH_BERKELEYDB)
@@ -80,7 +54,7 @@ CONFIGURE_ARGS+=	--with-dbm=sdbm
 .   elif ${WITH_DBM:L} == "gdbm"
 LIB_DEPENDS+=		gdbm.3:${PORTSDIR}/databases/gdbm
 CONFIGURE_ARGS+=	--with-gdbm=${LOCALBASE}
-.   elif ${WITH_DBM:L} == "db" 
+.   elif ${WITH_DBM:L} == "db"
 .       if ${WITH_BERKELEYDB} == "FreeBSD"
 CONFIGURE_ARGS+=	--with-dbm=db185 \
 			--with-berkeley-db=/usr
@@ -96,13 +70,13 @@ CONFIGURE_ARGS+=	--with-dbm=db3 \
 LIB_DEPENDS+=		db4:${PORTSDIR}/databases/db4
 CONFIGURE_ARGS+=	--with-dbm=db4 \
 			--with-berkeley-db=${LOCALBASE}
-.           if exists(${LOCALBASE}/lib/libdb41.so)
-BROKEN=		"It seems you have db41 installed. Current configuration process will choose it. Please use WITH_BERKELEYDB=db41"
-.           endif
 .       elif ${WITH_BERKELEYDB} == "db41"
 LIB_DEPENDS+=		db41:${PORTSDIR}/databases/db41
 CONFIGURE_ARGS+=	--with-dbm=db41 \
 			--with-berkeley-db=${LOCALBASE}
+#.       elif ${WITH_BERKELEYDB} == "db42"
+#LIB_DEPENDS+=		db-4.2:${PORTSDIR}/databases/db42
+#CONFIGURE_ARGS+=	--with-dbm=db42
 .       else
 BROKEN=		"Unknown Berkeley DB version"
 .       endif
@@ -140,7 +114,7 @@ DEFAULT_MODULES=	${AUTH_MODULES} ${DAV_MODULES} ${MISC_MODULES} \
 			${PROXY_MODULES} ${SLAVE_PORT_MODULES}
 
 AVAILABLE_MODULES=	${DEFAULT_MODULES} ${EXPERIMENTAL_MODULES} ${LDAP_MODULES} ${THREADS_MODULES} \
-			${SSL_MODULE} ${SUEXEC_MODULES}
+			${SSL_MODULE} ${SUEXEC_MODULES} ${SLAVE_PORT_MODULES}
 
 # Setting "@comment " as default.
 .for module in ${AVAILABLE_MODULES}
@@ -177,7 +151,7 @@ _APACHE_MODULES+=	${DEFAULT_MODULES}
 .    if defined(WITH_CUSTOM_AUTH)
 _APACHE_MODULES+=		${WITH_CUSTOM_AUTH}
 .    elif !defined(WITHOUT_AUTH)
-_APACHE_MODULES+=		${AUTH_MODULE}
+_APACHE_MODULES+=		${AUTH_MODULES}
 .   endif
 .   if defined(WITH_CUSTOM_PROXY)
 _APACHE_MODULES+=		${WITH_CUSTOM_PROXY}
@@ -213,17 +187,24 @@ RC_SUB+=		-e 's,@@SSL@@,,g'
 .endif
 
 .if defined(WITH_SUEXEC)
-SUEXEC_DOCROOT?=	${PREFIX_RELDEST}/www/data
-SUEXEC_USERDIR?=	public_html
-SUEXEC_SAFEPATH?=	${PREFIX_RELDEST}/bin:${LOCALBASE}/bin:/usr/bin:/bin
-_APACHE_MODULES+=	${SUEXEC_MODULES}
-CONFIGURE_ARGS+=	--with-suexec-caller=www \
-			--with-suexec-uidmin=1000 --with-suexec-gidmin=1000 \
-			--with-suexec-userdir="${SUEXEC_USERDIR}" \
-			--with-suexec-docroot="${SUEXEC_DOCROOT}" \
-			--with-suexec-safepath="${SUEXEC_SAFEPATH}" \
-			--with-suexec-logfile="/var/log/httpd-suexec.log" \
-			--with-suexec-bin="${PREFIX_RELDEST}/sbin/suexec"
+SUEXEC_DOCROOT?=		${PREFIX_RELDEST}/www/data
+SUEXEC_USERDIR?=		public_html
+SUEXEC_SAFEPATH?=		${PREFIX_RELDEST}/bin:${LOCALBASE}/bin:/usr/bin:/bin
+SUEXEC_UIDMIN?=			1000
+SUEXEC_GIDMIN?=			1000
+SUEXEC_CALLER?=			${APACHE_USER}
+_APACHE_MODULES+=		${SUEXEC_MODULES}
+CONFIGURE_ARGS+=		--with-suexec-caller=${SUEXEC_CALLER} \
+						--with-suexec-uidmin=${SUEXEC_UIDMIN} \
+						--with-suexec-gidmin=${SUEXEC_GIDMIN} \
+						--with-suexec-userdir="${SUEXEC_USERDIR}" \
+						--with-suexec-docroot="${SUEXEC_DOCROOT}" \
+						--with-suexec-safepath="${SUEXEC_SAFEPATH}" \
+						--with-suexec-logfile="/var/log/httpd-suexec.log" \
+						--with-suexec-bin="${PREFIX_RELDEST}/sbin/suexec"
+.   if defined(WITH_SUEXEC_UMASK)
+CONFIGURE_ARGS+=			--with-suexec-umask=${WITH_SUEXEC_UMASK}
+.   endif
 .endif
 .if defined(WITH_EXTRA_MODULES)
 _APACHE_MODULES+=	${WITH_EXTRA_MODULES}
