Add kcheckers, A QT version of the boardgame checkers

--- a/games/Makefile
+++ b/games/Makefile
@@ -216,6 +216,7 @@
     SUBDIR += jumpnbump
     SUBDIR += jzip
     SUBDIR += kbilliards
+    SUBDIR += kcheckers
     SUBDIR += kdegames3
     SUBDIR += klondike
     SUBDIR += knights
