--- a/www/Makefile
+++ b/www/Makefile
@@ -211,6 +211,7 @@
     SUBDIR += mod_blosxom
     SUBDIR += mod_blowchunks
     SUBDIR += mod_bunzip2
+    SUBDIR += mod_cfg_ldap
     SUBDIR += mod_cgi_debug
     SUBDIR += mod_color
     SUBDIR += mod_csacek
