--- a/graphics/Makefile
+++ b/graphics/Makefile
@@ -326,6 +326,7 @@
     SUBDIR += py-ming
     SUBDIR += py-opengl
     SUBDIR += py-paint
+    SUBDIR += q-graph
     SUBDIR += qcread
     SUBDIR += qglviewer
     SUBDIR += qiv
