- update to 0.11.5 - install the correct ChangeLog - add a patch so we have a better chance of working with 4.x Perl
PR:		61058
Submitted by:	maintainer

--- a/net-p2p/gift/Makefile
+++ b/net-p2p/gift/Makefile
@@ -6,8 +6,7 @@
 #
 
 PORTNAME=	giFT
-PORTVERSION=	0.11.4
-PORTREVISION=	2
+PORTVERSION=	0.11.5
 CATEGORIES=	net
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE}
 MASTER_SITE_SUBDIR=	${PORTNAME:L}
@@ -38,7 +37,7 @@ CONFIGURE_ARGS=	--enable-libmagic
 
 MAN1=	giftd.1
 
-DOC_FILES=	AUTHORS COPYING ChangeLog \
+DOC_FILES=	AUTHORS COPYING src/ChangeLog \
 		INSTALL NEWS QUICKSTART README TODO
 
 post-patch:
